--- a/client/softmaxShop-main/package.json
+++ b/client/softmaxShop-main/package.json
@@ -14,14 +14,17 @@
     "axios": "^1.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-images-viewer": "^1.7.1",
     "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
   },
